--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <h2><font size="5" color="orange"> ਮਿੱਤਰੋ.. </h2> 
   <p> ਕੋਈ ਦਿਮਾਗੀ ਆਈਡੀਆ ਹੋਵੇ ਤਾਂ ਸੁਝਾਅ ਹੇਠ ਦਿੱਤੇ ਆਈਡੀ ਤੇ ਜਰੂਰ ਭੇਜੋ </p>
 <! this is a comment >
-<br> ਅਤੇ ਡਿਜਾਈਨ ਕਿਵੇਂ ਲਗਿਆ ਜਰੂਰ ਦਸਿਓ ਨੈਟ ਤੋ ਹੀ ਚੱਕਿਆ। </font><br><br>
+<br> ਅਤੇ ਡਿਜਾਈਨ ਕਿਵੇਂ ਲਗਿਆ ਜਰੂਰ ਦਸਿਓ ਨੈਟ ਤੋ ਹੀ ਚੱਕਿਆ ਵਾ। </font><br><br>
 <img src="https://i.im.ge/2021/08/10/9oY0P.jpg">
  <br><br><p> <font size="5"><i> Email id : dashdash@dash.com <i></font>
 
