--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>ਨਵਾਂ ਪੇਜ</title>
 </head>
 
- <body style="background-color:grey">
+ <body>
   <h1><font color="violet"> ਸਤਿ ਸ਼੍ਰੀ ਅਕਾਲ ਜੀ ਸਾਰਿਆਂ ਨੂੰ  </h1>
   <h2><font size="5" color="orange"> ਮਿੱਤਰੋ.. </h2> 
   <p> ਕੋਈ ਦਿਮਾਗੀ ਆਈਡੀਆ ਹੋਵੇ ਤਾਂ ਸੁਝਾਅ ਹੇਠ ਦਿੱਤੇ ਆਈਡੀ ਤੇ ਜਰੂਰ ਭੇਜੋ </p>
