--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
 <head>
   <title>ਨਵਾਂ ਪੇਜ</title>
+  <link rel="spreadsheet" href="design.css" type="text/css">
 </head>
 
  <body>
@@ -12,7 +13,7 @@
 <! this is a comment >
 <br> ਅਤੇ ਡਿਜਾਈਨ ਕਿਵੇਂ ਲਗਿਆ ਜਰੂਰ ਦਸਿਓ ਨੈਟ ਤੋ ਹੀ ਚੱਕਿਆ ਵਾ। </font><br><br>
 <img src="https://i.im.ge/2021/08/10/9oY0P.jpg">
- <br><br><p> <font size="5"><i> Email id : dashdash@dash.com <i></font>
+ <br><br><p> <font size="5"><i> Email id : jjdoraha@gmail.com <i></font>
 
  </body>
 </html>
