--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <title>ਨਵਾਂ ਪੇਜ</title>
-  <link rel="spreadsheet" href="design.css" type="text/css">
+  <link rel="stylesheet" href="design.css" type="text/css">
 </head>
 
  <body>
