--- a/index.html
+++ b/index.html
@@ -4,6 +4,19 @@
 <head>
   <title>ਨਵਾਂ ਪੇਜ</title>
   <link rel="stylesheet" href="design.css" type="text/css">
+  <style> 
+div {
+  width: 100px;
+  height: 100px;
+  background: green;
+  transition: width 2s;
+  opacity: 40%;
+}
+
+div:hover {
+  width: 400px;
+}
+</style>
 </head>
 
  <body>
