--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@ div {
   background: green;
   transition: width 2s;
   opacity: 40%;
+  margin: 40px;
 }
 
 div:hover {
-  width: 400px;
+  width: 600px;
 }
 </style>
 </head>
@@ -26,8 +27,8 @@ div:hover {
 <! this is a comment >
 <br> ਅਤੇ ਡਿਜਾਈਨ ਕਿਵੇਂ ਲਗਿਆ ਜਰੂਰ ਦਸਿਓ ਨੈਟ ਤੋ ਹੀ ਚੱਕਿਆ ਵਾ। </font><br><br>
 <img src="https://i.im.ge/2021/08/10/9oY0P.jpg">
- <br><br><p> <font size="5"><i> Email id : jjdoraha@gmail.com <i></font>
-    <div>
+ <br><br><div><p> <font size="5"><i> Email id : jjdoraha@gmail.com <i></font>
+    
     </div>
  </body>
 </html>
